# gr-xcorrelate

./: CMakeLists.txt  MANIFEST.md  README.md
apps/: CMakeLists.txt  test_indices.py
docs/: CMakeLists.txt  README.xcorrelate
examples/: freq_domain_xcorr.grc  freq_domain_xcorr_2rtl.grc  freq_domain_xcorr_3rtl.grc  freq_domain_xcorr_4rtl.grc  radio_single_test_case.grc  xcorr_radio2.grc  xcorr_radio2_fft_td_comparison.grc  xcorr_radio3.grc  xcorr_radio3_plot_lags.grc  xcorr_radio4.grc  xcorr_test.grc  xcorr_test.py  xcorr_test_max_rate_no_ui.grc  xcorr_test_max_rate_with_ui.grc  xcorr_test_plot.grc  xcorr_xengine.grc
grc/: CMakeLists.txt  xcorrelate_ExtractDelay.block.yml  xcorrelate_VectorMaxIndexToVar.block.yml  xcorrelate_auto_polarization.block.yml  xcorrelate_fft_vcf.block.yml  xcorrelate_triangular_to_full.block.yml  xcorrelate_xcorrelate.block.yml  xcorrelate_xcorrelate_engine.block.yml  xcorrelate_xcorrelate_stream.block.yml
lib/: CMakeLists.txt  auto_polarization_impl.cc  auto_polarization_impl.h  test-xcorrelate.cc  test-xengine.cc  triangular_to_full_impl.cc  triangular_to_full_impl.h  xcorrelate_engine_impl.cc  xcorrelate_engine_impl.h  xcorrelate_impl.cc  (+3 more)
python/bindings/: CMakeLists.txt  auto_polarization_python.cc  python_bindings.cc  triangular_to_full_python.cc  xcorrelate_engine_python.cc  xcorrelate_fft_vcf2_python.cc  xcorrelate_python.cc
python/bindings/docstrings/: auto_polarization_pydoc_template.h  triangular_to_full_pydoc_template.h  xcorrelate_engine_pydoc_template.h  xcorrelate_fft_vcf2_pydoc_template.h  xcorrelate_pydoc_template.h
(+25 files in other folders)
